# api-docs/openapi/v3_0/photosApi.json
@@ -5,7 +5,7 @@
     "version" : "2.24.1"
   },
   "servers" : [ {
-    "url" : "http://localhost:51952",
+    "url" : "http://localhost:46816",
     "description" : "Generated server url"
   } ],
   "security" : [ {
@@ -15,14 +15,17 @@
   "paths" : {
     "/apis/api.photo.halo.run/v1alpha1/photogroups" : {
       "get" : {
-        "description" : "List photo groups.",
+        "description" : "List all photo groups sorted by priority.",
         "operationId" : "queryPhotoGroups",
         "responses" : {
           "default" : {
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/PhotoGroupVoList"
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/PhotoGroupVo"
+                  }
                 }
               }
             },
@@ -183,86 +186,17 @@
     },
     "/apis/console.api.photo.halo.run/v1alpha1/photogroups" : {
       "get" : {
-        "description" : "List photo groups.",
+        "description" : "List all photo groups sorted by priority.",
         "operationId" : "ListPhotoGroups",
-        "parameters" : [ {
-          "description" : "Page number. Default is 0.",
-          "in" : "query",
-          "name" : "page",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
-          "description" : "Size number. Default is 0.",
-          "in" : "query",
-          "name" : "size",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
-          "description" : "Label selector. e.g.: hidden!=true",
-          "in" : "query",
-          "name" : "labelSelector",
-          "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
-          }
-        }, {
-          "description" : "Field selector. e.g.: metadata.name==halo",
-          "in" : "query",
-          "name" : "fieldSelector",
-          "schema" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
-          }
-        }, {
-          "description" : "Sort criteria: field,(asc|desc). Supported fields: exif.dateTimeOriginal, metadata.creationTimestamp. Sorting by exif.dateTimeOriginal uses metadata.creationTimestamp when EXIF time is missing.",
-          "in" : "query",
-          "name" : "sort",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "Photos filtered by keyword.",
-          "in" : "query",
-          "name" : "keyword",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "photo group name",
-          "in" : "query",
-          "name" : "group",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "If true, return only photos without a group assigned. Overrides the 'group' parameter when set.",
-          "in" : "query",
-          "name" : "ungrouped",
-          "schema" : {
-            "type" : "boolean"
-          }
-        }, {
-          "description" : "photo tag",
-          "in" : "query",
-          "name" : "tag",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
         "responses" : {
           "default" : {
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/PhotoGroupList"
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/PhotoGroup"
+                  }
                 }
               }
             },
@@ -1133,7 +1067,7 @@
             "$ref" : "#/components/schemas/PhotoGroupSpec"
           },
           "status" : {
-            "$ref" : "#/components/schemas/PostGroupStatus"
+            "$ref" : "#/components/schemas/PhotoGroupStatus"
           }
         }
       },
@@ -1199,6 +1133,15 @@
           }
         }
       },
+      "PhotoGroupStatus" : {
+        "type" : "object",
+        "properties" : {
+          "photoCount" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }
+      },
       "PhotoGroupVo" : {
         "type" : "object",
         "properties" : {
@@ -1215,57 +1158,7 @@
             "$ref" : "#/components/schemas/PhotoGroupSpec"
           },
           "status" : {
-            "$ref" : "#/components/schemas/PostGroupStatus"
-          }
-        },
-        "description" : "A chunk of items."
-      },
-      "PhotoGroupVoList" : {
-        "required" : [ "first", "hasNext", "hasPrevious", "items", "last", "page", "size", "total", "totalPages" ],
-        "type" : "object",
-        "properties" : {
-          "first" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page is the first page."
-          },
-          "hasNext" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page has previous page."
-          },
-          "hasPrevious" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page has previous page."
-          },
-          "items" : {
-            "type" : "array",
-            "description" : "A chunk of items.",
-            "items" : {
-              "$ref" : "#/components/schemas/PhotoGroupVo"
-            }
-          },
-          "last" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page is the last page."
-          },
-          "page" : {
-            "type" : "integer",
-            "description" : "Page number, starts from 1. If not set or equal to 0, it means no pagination.",
-            "format" : "int32"
-          },
-          "size" : {
-            "type" : "integer",
-            "description" : "Size of each page. If not set or equal to 0, it means no pagination.",
-            "format" : "int32"
-          },
-          "total" : {
-            "type" : "integer",
-            "description" : "Total elements.",
-            "format" : "int64"
-          },
-          "totalPages" : {
-            "type" : "integer",
-            "description" : "Indicates total pages.",
-            "format" : "int64"
+            "$ref" : "#/components/schemas/PhotoGroupStatus"
           }
         }
       },
@@ -1440,15 +1333,6 @@
             "type" : "integer",
             "description" : "Indicates total pages.",
             "format" : "int64"
-          }
-        }
-      },
-      "PostGroupStatus" : {
-        "type" : "object",
-        "properties" : {
-          "photoCount" : {
-            "type" : "integer",
-            "format" : "int32"
           }
         }
       },
